objects/Resource__c.object
<CustomObject>
    <fields>
        <fullName>Any_Offers_in_Hand__c</fullName>
        <label>Any Offers in Hand</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTC__c</fullName>
        <label>CTC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Box__c</fullName>
        <label>Comment Box</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_CTC__c</fullName>
        <label>Current CTC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Location__c</fullName>
        <label>Current Location</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Organization__c</fullName>
        <label>Current Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notification ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expected_CTC__c</fullName>
        <label>Expected CTC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback1__c</fullName>
        <label>Feedback1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feedback2__c</fullName>
        <label>Feedback2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feedback3__c</fullName>
        <label>Feedback3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interviewer1__c</fullName>
        <label>Interviewer1</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interviewer2__c</fullName>
        <label>Interviewer2</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interviewer3__c</fullName>
        <label>Interviewer3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Posting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Posting</label>
        <referenceTo>Job_Posting__c</referenceTo>
        <relationshipLabel>Resource</relationshipLabel>
        <relationshipName>Resource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Level_Stages__c</fullName>
        <label>Next Level Stages</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Screening Rejection</fullName>
                </value>
                <value>
                    <fullName>High CTC Expectation</fullName>
                </value>
                <value>
                    <fullName>Location Constraint</fullName>
                </value>
                <value>
                    <fullName>Interview Rejection</fullName>
                </value>
                <value>
                    <fullName>HR Rejection</fullName>
                </value>
                <value>
                    <fullName>1st Level</fullName>
                </value>
                <value>
                    <fullName>2nd Level</fullName>
                </value>
                <value>
                    <fullName>3rd Level</fullName>
                </value>
                <value>
                    <fullName>Recommend Offer</fullName>
                </value>
                <value>
                    <fullName>HR Round</fullName>
                </value>
                <value>
                    <fullName>Joined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Level_Stages_del__c</fullName>
        <label>Next Level Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Screening Rejection</fullName>
                </value>
                <value>
                    <fullName>High CTC Expectation</fullName>
                </value>
                <value>
                    <fullName>Location Constraint</fullName>
                </value>
                <value>
                    <fullName>Interview Rejection</fullName>
                </value>
                <value>
                    <fullName>HR Rejection</fullName>
                </value>
                <value>
                    <fullName>1st Level</fullName>
                </value>
                <value>
                    <fullName>2nd Level</fullName>
                </value>
                <value>
                    <fullName>3rd Level</fullName>
                </value>
                <value>
                    <fullName>Recommend Offer</fullName>
                </value>
                <value>
                    <fullName>HR Round</fullName>
                </value>
                <value>
                    <fullName>Joined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notice_Period__c</fullName>
        <label>Notice Period</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasons_for_Job_Change__c</fullName>
        <label>Reasons for Job Change</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recruiter_Name__c</fullName>
        <label>Recruiter Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relevant_Experience__c</fullName>
        <label>Relevant Experience</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;NEW&quot;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NEW</fullName>
                    <default>true</default>
                    <label>NEW</label>
                </value>
                <value>
                    <fullName>Screening</fullName>
                </value>
                <value>
                    <fullName>1st Level Interview</fullName>
                </value>
                <value>
                    <fullName>2nd Level Interview</fullName>
                </value>
                <value>
                    <fullName>3rd Level Interview</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>HR Discussion</fullName>
                </value>
                <value>
                    <fullName>Recommend to Offer</fullName>
                </value>
                <value>
                    <fullName>Offered</fullName>
                </value>
                <value>
                    <fullName>Joined</fullName>
                </value>
                <value>
                    <fullName>Move to Next Stage</fullName>
                    <isActive>false</isActive>
                    <label>Move to Next Stage</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_year_of_Experience__c</fullName>
        <label>Total year of Experience</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Resource</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Job_Posting__c</columns>
        <columns>NAME</columns>
        <columns>Mobile__c</columns>
        <columns>Email__c</columns>
        <columns>Status__c</columns>
        <columns>Comment_Box__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>NEW,Screening,1st Level Interview,2nd Level Interview,3rd Level Interview,On Hold,Rejected,HR Discussion,Recommend to Offer,Offered,Joined</value>
        </filters>
        <filters>
            <field>Job_Posting__c</field>
            <operation>contains</operation>
            <value>GCP,managers,Developer</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Mobile_Number</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Mobile__c ) &lt;&gt; 10</errorConditionFormula>
        <errorDisplayField>Mobile__c</errorDisplayField>
        <errorMessage>Mobile Number is Invalid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_Number_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( Mobile__c , &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
        <errorDisplayField>Mobile__c</errorDisplayField>
        <errorMessage>Mobile Number Should have only 10 digits</errorMessage>
    </validationRules>
</CustomObject>